# fabrik-terraform-poc

./: .env-config.yaml  .gitignore  .pre-commit-config.yaml  .providers.tf  .tool-versions  CHANGELOG.md  Makefile  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: cache.yml  ci.yml  label.yml  release.yml  test.yml
components/: terragrunt.hcl
components/bootstrap/resource_groups/: .terraform.lock.hcl  terragrunt.hcl
modules/_bootstrap_resource_groups/: variables.tf
modules/resource_groups/: main.tf  variables.tf
tools/environments/: iac.py  test.py
tools/environments/test_config/: invalid_component.yaml  valid_env_vars.yaml
