[tool.poetry]
name = "fabrik-terraform-poc"
version = "0.0.0"
description = "Python wrapper for terragrunt"
readme = "README.md"
authors = ["Lee Myring <29373851+thinkstack@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
python-terraform = "^0.10.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-pycodestyle = "*"
reorder-python-imports = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
